Fix url parsing